<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Xavier Content Management System</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_event_overview">EventOverviewActivity</string>
    <string name="action_settings">Settings</string>
    <string name="no_events">Currently There Are No Events Maintained</string>
    <string name="event_edit_summary">Summary</string>
    <string name="event_edit_description">Description</string>
    <string name="event_edit_confirm">Confirm</string>
    <string name="event_edit_professor">Professor</string>
    <string name="event_edit_course">Course</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="imgdesc">IMG</string>
    <string name="menu_delete">Delete Event</string>
    <string name="assignment_button">View Assignments</string>
    <string name="events_button">View Events</string>
    <string name="internets_button">View Caf Menu</string>
    <string name="title_activity_business_college_events">BusinessCollegeEventsActivity</string>
    <string name="title_activity_list_item_detail">ListItemDetailActivity</string>
    <string name="button_add">Add Event</string>
    <string name="button_cal_add">Add to Calendar</string>
    <string name="title_activity_rssfeed">RSSFeed</string>
    <string name="title_activity_notes_management">NotesManagement</string>
    <string name="notes_button">Notes</string>
    <string name="notes_title">Title</string>
    <string name="notes_main_content">Notes</string>
    <string name="clear_button">Clear</string>
    <string name="submit_button">Submit</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_notes">Notes</string>
    <string name="add_new_note_button">Add Note </string>
    <string name="str_xavierimg1">Image1</string>

</resources>