<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <Spinner
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/priorities">
    </Spinner>
    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <EditText
            android:id="@+id/event_edit_summary"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/event_edit_summary"
            android:imeOptions="actionNext">
        </EditText>
     </LinearLayout>

    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
        <EditText
            android:id="@+id/event_edit_description"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/event_edit_description"
            android:imeOptions="actionNext" >
        </EditText>
    
        <EditText
            android:id="@+id/event_edit_professor"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/event_edit_professor"
            android:imeOptions="actionNext" >
        </EditText>
    
        <EditText
            android:id="@+id/event_edit_course"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/event_edit_course"
            android:imeOptions="actionNext" >
        </EditText> 
    </ScrollView>

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/event_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_edit_confirm">
    </Button>
</LinearLayout>
