<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >    
    
    
    <ViewFlipper
        android:id="@+id/viewFlipper1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        
        
	    android:inAnimation="@android:anim/fade_in"
	    android:outAnimation="@android:anim/fade_out"
	  >

        <ImageView
            android:id="@+id/imageView1"
           
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/xavierimg1"
            android:contentDescription="@string/str_xavierimg1" 
            
            />
        <!-- 
        <ImageView
            android:id="@+id/imageView2"
            
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:src="@drawable/xavierimg2"
            android:contentDescription="@string/str_xavierimg2"
           />
     
      
     
      	-->
		
               
        
        
    </ViewFlipper>
    
    
    
    
    
    
    <SlidingDrawer
        android:id="@+id/slidingDrawer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:content="@+id/content"
        android:handle="@+id/handle" >

        <Button
            android:id="@+id/handle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Handle" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            
            
		<Button
        android:id="@+id/btnAssignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assignment_button">
    </Button>   
    <Button
        android:id="@+id/btnEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/events_button">
    </Button>
    <Button
        android:id="@+id/btnInternets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internets_button">
    </Button>
    <Button
        android:id="@+id/btnNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes_button">
    </Button>
             
            

        </LinearLayout>
    </SlidingDrawer>
    
    
    
    
</FrameLayout>